tests/invalid/paramsused.nim
proc MyProc(arg: int) = discard
